<resources>
    <string name="app_name">AppSistemaPizzaria</string>
    <string name="rua">Rua:</string>
    <string name="numero">Numero</string>
    <string name="bairro">Bairro</string>
    <string name="complemento">Complemento</string>
    <string name="salvar">SALVAR</string>
    <string name="tipo_da_pizza">TIPO DA PIZZA:</string>
    <string name="borda">BORDA:</string>
    <string name="novo_pedido">NOVO PEDIDO:</string>
    <string name="sabor">SABOR</string>
    <string name="observacoes">OBSERVAÇÕES</string>
    <string name="enviar">ENVIAR</string>
    <string name="sabor_2">SABOR 2</string>
    <string name="pizza_pequena_8_peda_os">PIZZA PEQUENA 8 PEDAÇOS</string>
    <string name="pizza_grande_12_peda_os">PIZZA GRANDE 12 PEDAÇOS</string>
</resources>
